# labs_semester_1

./: README.md
0_game/: CMakeLists.txt  README.md  main.cpp
0_game/img/: App.rc
0_game/inc/: ball.hpp  block.hpp  platform.hpp
0_game/installer/: License_ENG.txt  License_RUS.txt  test.iss
0_game/src/: ball.cpp  block.cpp  platform.cpp
lab10/: CMakeLists.txt  Square.cpp  Square.hpp  main.cpp
lab7/: CMakeLists.txt  laba6.2.cpp
lab7/inc/: Functions.hpp
lab7/src/: Functions.cpp
lab9/: main.cpp
laba8/: 2.cpp  3.cpp  input2.txt  input3.txt
problem1 (работает)/: problem1.sln
problem1 (работает)/problem1/: problem1.cpp  problem1.vcxproj  problem1.vcxproj.filters
problem3 (работает)/: problem3.sln
problem3 (работает)/problem3/: functions.cpp  functions.hpp  input.txt  problem3.cpp  problem3.vcxproj  problem3.vcxproj.filters
problem4 (работает)/: problem4.sln
problem4 (работает)/problem4/: problem4.cpp  problem4.vcxproj  problem4.vcxproj.filters
problem5.3 (работает)/: problem5.3.sln
problem5.3 (работает)/problem5.3/: copy.txt  input.txt  problem5.3.cpp  problem5.3.vcxproj  problem5.3.vcxproj.filters
problem7 (работает)/: problem7.sln
problem7 (работает)/problem7/: input.txt  problem7.cpp  problem7.vcxproj  problem7.vcxproj.filters
problem8/: CMakeLists.txt  problem8.cpp  problem8.vcxproj  problem8.vcxproj.filters  trapezoid.cpp  trapezoid.hpp
problem8 (done)/: problem8.sln
problem8 (done)/problem8/: problem8.cpp  trapezoid.cpp  trapezoid.hpp
problem8/Debug/: problem8.exe.recipe  problem8.ilk  vc142.idb
(+71 files in other folders)
